# MyMultimediaSDK

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  build.py
.github/workflows/: ci.yml
cmake/: MultimediaSDKConfig.cmake.in
config/: modules.ini
docker/: linux-arm64.Dockerfile  linux-x64.Dockerfile
docs/superpowers/plans/: 2026-07-16-multimedia-sdk-implementation.md
docs/superpowers/specs/: 2026-07-16-multimedia-sdk-design.md
patches/gstreamer/: 001-guard-docs-subdir.patch  002-guard-docs-subdir-base-bad.patch  docs-guard-all.patch
scripts/: build-ffmpeg.sh  build-gstreamer.sh  package.sh
tests/smoke/: CMakeLists.txt  build.sh  main.c
